[package]
edition = "2021"
name = "ludic"
version = "0.1.0"

[dependencies]
either = {version = "1.6.1", features = ["serde"]}
faber = {version = "0.1.0", path = "../faber"}
forgic = {version = "0.1.0", path = "../forgic"}
futures = "0.3"
libic = {version = "0.1.0", path = "../libic"}
quantum = {version = "0.1.0", path = "../quantum"}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
vanel = {version = "0.1.0", path = "../vanel"}
